--- a/templates/index.html
+++ b/templates/index.html
@@ -46,16 +46,33 @@
       button:hover {
         background-color: #0056b3;
       }
+      .todo-container {
+        display: flex;
+        width: 600px;
+        height: 400px;
+        margin: auto;
+        padding: 20px;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
     </style>
   </head>
   <body>
-    <h1>To-Do List</h1>
-    <ul id="todo-list"></ul>
-    <form id="todo-form">
-      <input type="text" id="title" placeholder="Title" required />
-      <input type="text" id="description" placeholder="Description" required />
-      <button type="submit">Add To-Do</button>
-    </form>
+    <div class="todo-container">
+      <h1>To-Do List</h1>
+      <ul id="todo-list"></ul>
+      <form id="todo-form">
+        <input type="text" id="title" placeholder="Title" required />
+        <input
+          type="text"
+          id="description"
+          placeholder="Description"
+          required
+        />
+        <button type="submit">Add To-Do</button>
+      </form>
+    </div>
     <script>
       async function fetchTodos() {
         const response = await fetch("/todos");
