--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,12 @@
         justify-content: center;
         flex-direction: column;
       }
+      #todo-list {
+        width: 100%;
+        height: 250px;
+        overflow-y: auto;
+        margin-bottom: 20px;
+      }
     </style>
   </head>
   <body>
