제출 시 입력란 비우기

--- a/templates/index.html
+++ b/templates/index.html
@@ -280,6 +280,8 @@
           });
           if (response.ok) {
             fetchTodos();
+            document.getElementById("title").value = "";
+            document.getElementById("description").value = "";
           }
         });
 
