삭제 시 고유 id로 항목 제거

--- a/templates/index.html
+++ b/templates/index.html
@@ -268,7 +268,8 @@
           method: "DELETE",
         });
         if (response.ok) {
-          fetchTodos();
+          // fetchTodos();
+          document.getElementById(`todo-${id}`).remove();
         }
       }
 
