드래그 애니메이팅 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -153,14 +153,13 @@
         align-items: center;
         justify-content: space-between;
         margin-right: 8px;
-        transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
         position: relative;
         z-index: 1;
       }
 
       .sortable-ghost {
         opacity: 0.4;
-        background: #cce5ff;
+        background: #cce5ff40;
       }
 
       .sortable-chosen {
